# pyqt5

./: ChangeLog  NEWS  configure.py  project.py  pyproject.toml  pyqt5_5.14.1+dfsg.orig.tar.xz.delta  pyqt5_5.14.1+dfsg.orig.tar.xz.id
debian/: changelog  control  copyright  not-installed  pyqt5-dev-tools.install  pyqt5-dev-tools.manpages  pyqt5-dev.install  pyqt5-examples.links  python3-pyqt5.install  python3-pyqt5.qtmultimedia.install  python3-pyqt5.qtopengl.install  python3-pyqt5.qtpositioning.install  python3-pyqt5.qtquick.install  python3-pyqt5.qtsensors.install  python3-pyqt5.qtserialport.install  python3-pyqt5.qtsql.install  python3-pyqt5.qtsvg.install  python3-pyqt5.qtwebchannel.install  python3-pyqt5.qtwebkit.install  python3-pyqt5.qtwebsockets.install  python3-pyqt5.qtx11extras.install  python3-pyqt5.qtxmlpatterns.install  rules  watch
debian/manpages/: pylupdate5.1  pyrcc5.1  pyuic5.1
debian/patches/: public_sip.diff  series
debian/source/: lintian-overrides
debian/tests/: control  import
designer/: pluginloader.cpp
qmlscene/: pluginloader.cpp
qpy/QtCore/: qpycore_classinfo.cpp  qpycore_enums_flags.cpp  qpycore_pyqtboundsignal.cpp  qpycore_pyqtsignal.cpp  qpycore_pyqtslot.cpp  qpycore_qjsonvalue.cpp  qpycore_qobject_helpers.cpp
sip/QtAndroidExtras/: qandroidjniobject.sip
sip/_QOpenGLFunctions_2_0/: qopenglfunctions_2_0.sip
sip/_QOpenGLFunctions_2_1/: qopenglfunctions_2_1.sip
sip/_QOpenGLFunctions_4_1_Core/: qopenglfunctions_4_1_core.sip
sip/_QOpenGLFunctions_ES2/: qopenglfunctions_es2.sip
